[package]
name = "dht"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
env_logger = "0.9.0"
sha2 = "0.10.2"
bincode = "1.3.3"
serde = {version= "1.0.137", features = ["derive"]}
crossbeam-channel = "0.5.4"
hex = "0.4.3"
chrono = "0.4.19"
